# physics

./: .clang-format  .gitignore  Ball.h  Box.h  CMakeLists.txt  Physics.cpp  Physics.h  README.md  Vector2D.cpp  Vector2D.h  main.cpp
.cache/clangd/index/: Ball.cpp.D3FE82443163F39F.idx  Ball.h.F8CADD87C4381466.idx  Box.cpp.E36A1705B093C9EF.idx  Box.h.2236E8A2C373532F.idx  Physics.cpp.055F2739C6B5D709.idx  Physics.h.73C1CACA2A77A60A.idx  Vector2D.cpp.F7AD380648D8F4D0.idx  Vector2D.h.3D7DD356D17713AB.idx  main.cpp.2B1717E4C8EFEA0D.idx
src/: main.cpp
src/entities/: Ball.h  Box.h  Obstacle.h
src/math/: Vector2D.cpp  Vector2D.h
src/physics/: Forces.h  ObstacleCollision.h  Physics.cpp  Physics.h  PhysicsThread.h  SpatialGrid.h
src/render/: Particles.h
